force-app/main/default/objects/Branche_mission__mdt/Branche_mission__mdt.object-meta.xml
<CustomObject>
    <label>Branche mission</label>
    <pluralLabel>Branches missions</pluralLabel>
</CustomObject>