force-app/main/default/objects/Branche_mission__mdt/fields/Branche__c.field-meta.xml
<CustomField>
    <fullName>Branche__c</fullName>
    <label>Branche</label>
    <length>100</length>
    <type>Text</type>
</CustomField>