force-app/main/default/objects/Branche_mission__mdt/fields/Type_Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Type_Prestataire__c</fullName>
    <label>Type Prestataire</label>
    <length>100</length>
    <type>Text</type>
</CustomField>